--- a/bookdown/packages.bib
+++ b/bookdown/packages.bib
@@ -10,14 +10,14 @@
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2018},
-  note = {R package version 0.7},
+  note = {R package version 0.8},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 @Manual{R-DT,
   title = {DT: A Wrapper of the JavaScript Library 'DataTables'},
-  author = {Yihui Xie},
+  author = {Yihui Xie and Joe Cheng and Xianying Tan},
   year = {2018},
-  note = {R package version 0.4},
+  note = {R package version 0.5},
   url = {https://CRAN.R-project.org/package=DT},
 }
 @Manual{R-e1071,
@@ -32,7 +32,7 @@ Theory Group (Formerly: E1071), TU Wien},
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo},
   year = {2018},
-  note = {R package version 3.0.0},
+  note = {R package version 3.1.0},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 @Manual{R-gridExtra,
@@ -46,7 +46,7 @@ Theory Group (Formerly: E1071), TU Wien},
   title = {htmlwidgets: HTML Widgets for R},
   author = {Ramnath Vaidyanathan and Yihui Xie and JJ Allaire and Joe Cheng and Kenton Russell},
   year = {2018},
-  note = {R package version 1.2},
+  note = {R package version 1.3},
   url = {https://CRAN.R-project.org/package=htmlwidgets},
 }
 @Manual{R-knitr,
@@ -65,10 +65,10 @@ Theory Group (Formerly: E1071), TU Wien},
 }
 @Manual{R-modeest,
   title = {modeest: Mode Estimation},
-  author = {P. PONCET},
-  year = {2012},
-  note = {R package version 2.1},
-  url = {https://CRAN.R-project.org/package=modeest},
+  author = {Paul Poncet},
+  year = {2018},
+  note = {R package version 2.3.2},
+  url = {https://github.com/paulponcet/modeest},
 }
 @Manual{R-moments,
   title = {moments: Moments, cumulants, skewness, kurtosis and related tests},
@@ -87,7 +87,7 @@ Theory Group (Formerly: E1071), TU Wien},
 @Manual{R-webshot,
   title = {webshot: Take Screenshots of Web Pages},
   author = {Winston Chang},
-  year = {2017},
-  note = {R package version 0.5.0},
+  year = {2018},
+  note = {R package version 0.5.1},
   url = {https://CRAN.R-project.org/package=webshot},
 }
